# ACE

./: .gitattributes  .gitignore  README.md
microservices/ace_agent/: README.md
microservices/ace_agent/4.0/openapi/: chat_engine_openapi.json  nlp_server_openapi.json  plugin_server_openapi.json
microservices/ace_agent/4.0/proto/: ace_agent.proto
microservices/ace_agent/4.1/: README.md
microservices/ace_agent/4.1/openapi/: plugin_server_openapi.json
microservices/ace_agent/4.1/proto/: ace_agent.proto
microservices/ace_agent/clients/chat_client/: chat_client.py  requirements.txt
microservices/ace_agent/clients/event_client/: style.css
microservices/ace_agent/clients/speech_client/: speech_client.py
microservices/ace_agent/deploy/wheel/: aceagent-4.0.0-py3-none-any.whl  aceagent-4.1.0-py3-none-any.whl
microservices/ace_agent/openapi/: chat_engine_openapi.json  nlp_server_openapi.json
microservices/ace_agent/webui/: README.md  docker-compose.yml
microservices/audio_2_face_microservice/: README.md
microservices/audio_2_face_microservice/1.0/: README.md
microservices/audio_2_face_microservice/1.2/: README.md
microservices/audio_2_face_microservice/proto/: files_to_compile.yaml
tools/avatar_configurator/1.0/: README.md
tools/ucs_tools/: README.md
workflows/animation_pipeline/: README.md
workflows/animation_pipeline/1.0/: README.md
workflows/tokkio/: README.md  tokkio-app-params.yaml  tokkio-app.yaml  tokkio-llm-app-params.yaml  tokkio-llm-app.yaml
workflows/tokkio/5.0.0-beta/: README.md
workflows/tokkio/5.0.0-beta/src/llm-rag/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  third_party_oss_license.txt
workflows/tokkio/5.0.0-beta/src/llm-rag/configs/: config.yaml
workflows/tokkio/5.0.0-beta/src/llm-rag/src/: __init__.py  bot.py  config.py  custom_view_processor.py  serializer.py  tokkio_llm.py  tokkio_rag.py
workflows/tokkio/5.0.0-ga/local-dev-workflow/: .env  README.md  config.py  pyproject.toml  start_dev.py
workflows/tokkio/5.0.0-ga/src/llm-rag/: .dockerignore  Dockerfile  LICENSE  entrypoint.sh  pyproject.toml  third_party_oss_license.txt
workflows/tokkio/5.0.0-ga/src/llm-rag/configs/: config.yaml
workflows/tokkio/5.0.0-ga/src/llm-rag/src/: bot.py  config.py  otel.py  rag_multimodal_response_processor.py  serializer.py  tokkio_llm.py  tokkio_rag.py
workflows/tokkio/llm-rag/: tokkio-llm-app-params.yaml
(+1159 files in other folders)
