[project]
name = "local-dev"
version = "0.1.0"
description = "Tokkio Local Ace Controller Developer Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "httpx>=0.28.1",
    "kubernetes>=32.0.1",
    "loguru>=0.7.3",
    "redis>=5.2.1",
    "websockets>=15.0.1",
]
